--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,52 @@
-version: '3.1'
+version: "3"
+
 services:
-    app:
-        container_name: app
-        build:
-            ./
-        ports:
-            - 5000:5000
-        expose:
-            - 5000
-        environment: 
-            - FLASK_DEBUG=1
-            - FLASK_APP=app
+  db:
+    image: mysql:5.7
+    container_name: sql_db
+    volumes:
+      - ./db:/docker-entrypoint-initdb.d
+      - ./db/data:/var/lib/mysql
+    restart: always
+    environment:
+      - MYSQL_USER=dbuser
+      - MYSQL_PASSWORD=dbpassword
+      - MYSQL_ROOT_PASSWORD=password
+      - MYSQL_DATABASE=quotes_db
+      - MYSQL_ALLOW_EMPTY_PASSWORD=yes
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: phpmyadmin
+    restart: always
+    depends_on:
+      - db
+    environment:
+      - PMA_HOST=db
+      - MYSQL_ROOT_PASSWORD=root
+    ports:
+      - 3000:80
+
+  backend:
+    build: ./backend
+    container_name: flask
+    restart: always
+    volumes:
+      - ./backend/:/app
+    expose:
+      - 9000
+
+  frontend:
+    build: ./frontend
+    container_name: vuejs
+    restart: always
+    expose:
+      - 80
+
+  server:
+    build: ./nginx
+    container_name: nginx
+    restart: always
+    ports:
+      #- "8080:8000"
+      - "8080:80"
