--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build: ./server
     container_name: flask
     restart: always
+    ports: 
+      - 5000:5000
     expose:
       - 5000
 
@@ -12,5 +14,7 @@ services:
     build: ./client
     container_name: node
     restart: always
+    ports:
+      - 8080:8080
     expose:
       - 8080
