--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "core-js": "^3.6.5",
-    "node-sass": "^5.0.0",
-    "sass-loader": "^10.1.0",
+    "draggable-vue-directive": "^2.1.0",
+    "material-icon": "^0.1.4",
     "vue": "^2.6.11",
+    "vue-button": "^0.1.0",
+    "vue-float-action-button": "^0.6.6",
     "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.2.0"
   },
@@ -28,6 +30,8 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
