--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "vue-button": "^0.1.0",
     "vue-dragscroll": "^2.1.0",
     "vue-float-action-button": "^0.6.6",
+    "vue-json-viewer": "^2.2.16",
     "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.2.0",
     "vue-youtube": "^1.4.0"
