Fix client Dockerfile

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,8 +1,9 @@
-FROM node
-COPY babel.config.js package-lock.json package.json yarn.lock .browserslistrc .editorconfig .eslintrc.js /home/
+FROM node:12-alpine
+COPY babel.config.js package.json yarn.lock .browserslistrc .editorconfig .eslintrc.js /home/
 COPY src /home/src
 COPY public /home/public
 WORKDIR /home
+RUN npm install
 RUN npm install -g @vue/cli@3.7.0
 RUN npm i @vue/cli-service
 RUN npm install chokidar
