correct issue in compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 
 services:
-  server:
+  backend:
     build: ./server
     container_name: flask
     volumes:
@@ -12,7 +12,7 @@ services:
     expose:
       - 5000
 
-  frontend:
+  server:
     build: ./client
     container_name: node
     ports:
